--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
 certifi==2024.6.2
 cftime==1.6.4
+charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
+decorator==4.4.2
 fonttools==4.53.0
 h5py==3.11.0
+idna==3.7
 imageio==2.34.1
+imageio-ffmpeg==0.5.1
 kiwisolver==1.4.5
 matplotlib==3.9.0
+moviepy==1.0.3
 netCDF4==1.7.1.post1
 numpy==2.0.0
 packaging==24.1
 pillow==10.3.0
+proglog==0.1.10
 psutil==6.0.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+requests==2.32.3
 scipy==1.13.1
+setuptools==70.3.0
 six==1.16.0
+tqdm==4.66.4
+urllib3==2.2.2
